--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/lavas-project/hexo-pwa.git"
   },
   "dependencies": {
+    "lodash": "4.17.11",
     "lodash.template": "^4.4.0"
   }
 }
